# Dev_DspLib

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CMakeSettings_beagle.json  CMakeSettings_linux.json  Dev_DspLib.sln  Dev_Pulse.sln  LICENSE  LICENSE.txt  MyBeagleToolchain.cmake  MyCMake.cmake  MyCodeMacros.cmake  MyGlobalImports.cmake  MyLocalImports.cmake  MyOverrides.cmake  MyPostBuild.cmake  MyPrecompiledHeader.cmake  MySpecial.cmake  README.md  imx8mm-toolchain.cmake  set_for_beagle.bat  set_for_linux.bat  set_for_win.bat  toolchain-beagle-win.cmake  toolchain-mx93-ubu.cmake  toolchain-mx93-win.cmake  toolchain-rpi-ubu.cmake  toolchain-rpi-win.cmake
Butterworth/: Butterworth.vcxproj  Butterworth.vcxproj.filters  CMakeLists.txt  MainInit.cpp  stdafx.h
Butterworth/Source/: ButterworthCo.cpp  ButterworthCo.h  ButterworthCoDoc.txt  CmdLineExec.cpp  Main.cpp  MainInit.cpp  dspButterworthCo.cpp  dspButterworthCo.h
CalTableTest/: CMakeLists.txt  CmdLineExec.cpp  MyCalTable.h  dspCalTable.cpp  dspCalTable.h  dspCalTable2.cpp  dspCalTable2.h  stdafx.h
DelayTest/: CMakeLists.txt  DelayOne_delay2.cpp  DelayStub.h  DelayTest.vcxproj  DelayTest.vcxproj.filters  Parms.cpp  dspGoldSearch.cpp  dspHistoryDelayEstimator.cpp  dspHistoryDelayEstimator.h
DelayTest/Source/: CmdLineExec.cpp  CmdLineExec.h  DelayEstimator.cpp  DelayEstimator.h  DelayOne.h  DelayOne_delay1.cpp  DelayOne_delay2.cpp  DelayStub.cpp  MainInit.cpp  MainInit.h  Parms.cpp  Parms.h  dspGoldSearch.cpp  dspGoldSearch.h  dspHistoryDelayEstimator.cpp  dspHistoryDelayEstimator.h
DspLib/: CMakeLists.txt  DspLib.vcxproj  DspLib.vcxproj.filters  DspLibConfig.cmake  dspBiasEstimator.h  dspBoundCount.cpp  dspButterworthCo.h  dspCalTable.cpp  dspCalTable.h  dspCalTable1.h  dspCalTable2.cpp  dspCalTable2.h  dspDownCount.cpp  dspDownCount.h  dspFIRCDiff.h  dspFIRCDiffCoeff.cpp  dspFIRCDiffCoeff.h  dspFIRFilter.h  dspFIRFilterBase.h  dspFIRSavGol.h  dspFilterAlpha.cpp  dspFilterAlpha.h  dspFilterAlphaAbsDev.cpp  dspFilterAlphaAbsDev.h  dspFilterAlphaAlpha.h  dspFilterAlphaFloat.cpp  dspFilterAlphaFloat.h  dspFilterAlphaOne.h  dspFilterAlphaStdDev.cpp  dspFilterAlphaStdDev.h  dspFilterAlphaThree.h  dspFilterAlphaTwo.h  dspFilterButterworth.cpp  dspFilterButterworth.h  dspFilterDevAlpha.cpp  dspFilterDevAlpha.h  dspFilterFilters.h  dspFilterStatistics.cpp  dspFilterStatistics.h  dspFuzzyAlpha.cpp  (+85 more)
DspLib/Source/: dspButterworthCo.cpp  dspButterworthCo.h  dspDefs.h  dspFilterAlpha.cpp  dspFilterAlpha.h  dspFilterAlphaSS.cpp  dspFilterAlphaSS.h  dspFilterButterworth.cpp  dspFilterButterworth.h  dspFilterFilters.cpp  dspFilterFilters.h  dspFilterStatistics.cpp  dspFilterStatistics.h  dspFunctionObject.h  dspHistory.h  dspHistoryAlphaFilter.cpp  dspHistoryAlphaFilter.h  dspHistoryConverters.cpp  dspHistoryConverters.h  dspHistoryFilterCDiffBase.cpp  dspHistoryFilterCDiffBase.h  dspHistoryFilterCDiffHolob.cpp  dspHistoryFilterCDiffHolob.h  dspHistoryFilterCDiffIdentity.cpp  dspHistoryFilterCDiffIdentity.h  dspHistoryFilterCDiffSavGol.cpp  dspHistoryFilterCDiffSavGol.h  dspHistoryFilterCausal.cpp  dspHistoryFilterCausal.h  dspHistoryFilterNoncausal.cpp  dspHistoryFilterNoncausal.h  dspHistoryFilterOperator.h  dspHistoryFilterOperator_XY.cpp  dspHistoryFilterOperator_XY12.cpp  (+85 more)
FileTest/: CMakeLists.txt  CmdLineExec.cpp  FileTest.vcxproj  FileTest.vcxproj.filters  MainInit.cpp
FreqDetector/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  FreqDetector.vcxproj  FreqDetector.vcxproj.filters  MainInit.cpp  someDetector.h
FuzzyBool/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  Main.cpp  MainInit.cpp  dspFuzzyBool.h  stdafx.h
HistoryTest/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  DemoOne.h  DemoOne_demo1.cpp  DemoOne_demo2.cpp  DemoOne_demo3.cpp  HistoryTest.vcxproj  HistoryTest.vcxproj.filters  MainInit.cpp  Parms.cpp  Parms.h  SignalHistory.csv  TestOne.h  TestOne_causal1.cpp  TestOne_causal12.cpp  TestOne_mem1.cpp  TestOne_run1deg.cpp  TestOne_run2.cpp  TestOne_run6.cpp  TestOne_run7.cpp  TestOne_run8.cpp
LLogic/: CMakeLists.txt  CmdLineExec.cpp  LBool.cpp  LBool.h  LSentence.cpp  LSentence.h
LutTest/: CMakeLists.txt  CmdLineExec.cpp  LutTest.vcxproj  LutTest.vcxproj.filters
PulseAnalyzer/: CMakeLists.txt  CmdLineExec.cpp  PulseAnalyzer.vcxproj  PulseAnalyzer.vcxproj.filters  ccValueQueue.h  dspFrontEnd.h  dspPulseDetector.h  dspPulseStatistics.cpp  readme.txt
PulseGenerator/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  MainInit.cpp  PulseGenerator.vcxproj  PulseGenerator.vcxproj.filters  dspPulseGen.cpp  dspPulseSignalGen.cpp
PulseTest/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  Main.cpp  MainInit.cpp  MainInit.h  PlotWriter.cpp  PlotWriter.h  PulseGen.cpp  PulseGen.h  PulseParms.cpp  PulseParms.h  PulseProc.cpp  PulseProc.h  PulseWriter.cpp  PulseWriter.h  cmnPaths.cpp  cmnPaths.h  dspBoundCount.h  dspFuzzyAlpha.h  dspSlidingSum.h  stdafx.cpp  stdafx.h
RVectorTest/: CMakeLists.txt  MainInit.cpp  RVectorTest.vcxproj  RVectorTest.vcxproj.filters
RootFinder/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  MainInit.cpp  RootFinder.vcxproj  RootFinder.vcxproj.filters  Special_Parms.cpp  Special_Parms.h  SysEquations.h  SysEquationsTwo.h  dspRootFinder.cpp  dspRootFinderTwo.h  stdafx.h
SlowTest/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  Main.cpp  MainInit.cpp  dspSlowTestParms.cpp  dspSlowTestParms.h  dspSlowThresholder.cpp  dspSlowThresholder.h  dspSlowThresholderParms.cpp  dspSlowThresholderParms.h  someSlowClassifier.cpp  someSlowClassifier.h  someSlowTestParms.cpp  someSlowTestParms.h  someSlowTestParmsFile.cpp  someSlowTestParmsFile.h  someThreadParms.cpp  someThreadParms.h  someTimerThread.cpp  someTimerThread.h  stdafx.h
Statistics/: CMakeLists.txt  CmdLineExec.cpp  MainInit.h  Statistics.vcxproj  Statistics.vcxproj.filters  stdafx.h
Test/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  MainInit.cpp  Test.vcxproj  Test.vcxproj.filters  stdafx.h
ThreeVector/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  ThreeVector.vcxproj  ThreeVector.vcxproj.filters
(+354 files in other folders)
